# regolith

./: CMakeLists.txt  build  build.sh
aura/: CMakeLists.txt
aura/configuration/: CMakeLists.txt
aura/configuration/binoc/: CMakeLists.txt
aura/configuration/binoc/binaryoutcast/: CMakeLists.txt
aura/configuration/binoc/binaryoutcast/nginx/: CMakeLists.txt  techcentral.binaryoutcast.com.vhost.in  wpadmin.passwd  www.binaryoutcast.com.vhost.in
aura/configuration/binoc/binaryoutcast/php/: CMakeLists.txt
aura/configuration/binoc/binocnetwork/: CMakeLists.txt
aura/configuration/binoc/binocnetwork/nginx/: CMakeLists.txt
aura/configuration/binoc/newtobinparadigm/: CMakeLists.txt
aura/configuration/binoc/newtobinparadigm/nginx/: CMakeLists.txt
aura/configuration/binoc/newtobinparadigm/vsftpd/: CMakeLists.txt  vsftpd.conf
aura/configuration/binoc/newtobinparadigm/vsftpd/users/: CMakeLists.txt  files
aura/configuration/binoc/royalgeekworld/nginx/: CMakeLists.txt
aura/configuration/binoc/royalgeekworld/php/: CMakeLists.txt
aura/configuration/mcp/: CMakeLists.txt
aura/configuration/mcp/palemoon/: CMakeLists.txt
aura/configuration/mcp/palemoon/nginx/: CMakeLists.txt  addons.palemoon.org.vhost.in
aura/configuration/mcp/palemoon/php/: CMakeLists.txt
aura/configuration/staff/: CMakeLists.txt
aura/configuration/staff/valik/: CMakeLists.txt
aura/configuration/staff/valik/nginx/: CMakeLists.txt
aura/configuration/system/: CMakeLists.txt
aura/configuration/system/bind/: CMakeLists.txt  binaryoutcast.com.zone.in  mattatobin.com.zone.in  named.conf.in  named.inc.in  royalgeekworld.com.zone.in  royalgeekworld.net.zone.in
aura/configuration/system/nginx/: CMakeLists.txt  mime-types.inc  standard-php.inc
aura/configuration/system/php/: CMakeLists.txt
aura/configuration/unaffiliated/dovedesign/nginx/: CMakeLists.txt
aura/configuration/unaffiliated/dovedesign/php/: CMakeLists.txt
aura/configuration/unaffiliated/kokomosaferefuge/: CMakeLists.txt
aura/configuration/unaffiliated/kokomosaferefuge/nginx/: CMakeLists.txt
aura/templates/nginx/: nginx.conf.in  nginx.service.in  simple.vhost.in  standard.proxy.in  standard.vhost.in
aura/templates/php/: php-pool.conf.in  php.conf.in  php.ini.in  php.service  php.service.in
config/: CMakeLists.txt
config/cmk_modules/: mk_path.cmake  pyPP-nginx.cmake  pyPreprocess.cmake  py_pp.cmake
config/preprocessor/: Preprocessor.py
config/system/: CMakeLists.txt
config/vsftpd/: CMakeLists.txt  vsftpd.conf  vsftpd.pam
configuration/: CMakeLists.txt
configuration/binoc/: CMakeLists.txt
configuration/binoc/binaryoutcast/: CMakeLists.txt
configuration/binoc/binaryoutcast/nginx/: CMakeLists.txt  techcentral.binaryoutcast.com.vhost.in  www.binaryoutcast.com.vhost.inc
configuration/binoc/binaryoutcast/php/: CMakeLists.txt
configuration/binoc/binocnetwork/: CMakeLists.txt
configuration/binoc/binocnetwork/apache/: CMakeLists.txt
configuration/binoc/binocnetwork/nginx/: CMakeLists.txt
configuration/binoc/binocnetwork/php/: CMakeLists.txt
configuration/binoc/hiddenpalace/: CMakeLists.txt
configuration/binoc/hiddenpalace/nginx/: CMakeLists.txt
configuration/binoc/newtobinparadigm/: CMakeLists.txt
configuration/binoc/newtobinparadigm/nginx/: CMakeLists.txt
configuration/binoc/newtobinparadigm/php/: CMakeLists.txt
configuration/binoc/newtobinparadigm/vsftpd/: CMakeLists.txt  vsftpd.conf  vsftpd.pam  vsftpd.service
configuration/binoc/newtobinparadigm/vsftpd/users/: CMakeLists.txt  capture  private
configuration/binoc/newtobinparadigm/znc/: CMakeLists.txt
configuration/binoc/royalgeekworld/: CMakeLists.txt
configuration/binoc/royalgeekworld/nginx/: CMakeLists.txt
configuration/binoc/royalgeekworld/php/: CMakeLists.txt
configuration/mcp/: CMakeLists.txt
configuration/mcp/palemoon/: CMakeLists.txt
configuration/mcp/palemoon/nginx/: CMakeLists.txt  addons.palemoon.org.vhost.inc  dev.addons.palemoon.org.vhost.inc
configuration/mcp/palemoon/php/: CMakeLists.txt
configuration/mcp/palemoon/vsftpd/: CMakeLists.txt  vsftpd.pam  vsftpd.service
configuration/staff/: CMakeLists.txt
configuration/staff/valik/: CMakeLists.txt
configuration/staff/valik/nginx/: CMakeLists.txt
configuration/system/: CMakeLists.txt
configuration/system/bind/: CMakeLists.txt  binaryoutcast.com.zone.in  bind.service.in  binocnetwork.com.zone.in  mattatobin.com.zone.in  named.conf.in  named.inc.in  royalgeekworld.com.zone.in  royalgeekworld.net.zone.in  standard.zone.in
configuration/system/mysql/: CMakeLists.txt
configuration/system/nginx/: CMakeLists.txt
configuration/system/php/: CMakeLists.txt
configuration/unaffiliated/: CMakeLists.txt
configuration/unaffiliated/dovedesign/: CMakeLists.txt
configuration/unaffiliated/dovedesign/nginx/: CMakeLists.txt
configuration/unaffiliated/dovedesign/php/: CMakeLists.txt
configuration/unaffiliated/kokomosaferefuge/: CMakeLists.txt
configuration/unaffiliated/kokomosaferefuge/nginx/: CMakeLists.txt
configuration/unaffiliated/kokomosaferefuge/php/: CMakeLists.txt
configuration/unaffiliated/ratty/: CMakeLists.txt
configuration/unaffiliated/ratty/apache/: CMakeLists.txt
configuration/unaffiliated/sagexpo/: CMakeLists.txt
configuration/unaffiliated/sagexpo/nginx/: CMakeLists.txt
configuration/unaffiliated/simplehosted/: CMakeLists.txt
configuration/unaffiliated/simplehosted/vsftpd/: vsftpd.conf  vsftpd.pam  vsftpd.service
configuration/unaffiliated/simplehosted/vsftpd/users/: CMakeLists.txt  user-template
old/palemoon/: CMakeLists.txt
src/: CMakeLists.txt
src/nginx/: CMakeLists.txt  addons.palemoon.org.server.inc  iw.addons.hyperbola.info.server.inc  nginx.conf.in  nginx.service.in  regolith.palemoon.org.server.inc  standard-php.inc  standard.proxy.in  standard.server.in
src/php/: CMakeLists.txt  php-pool.conf.in  php.conf.in  php.ini  php.service.in
src/rethinkdb/: CMakeLists.txt  regolith-phoebus.conf  regolith-rethinkdb.service
src/vsftpd/: CMakeLists.txt  vsftpd.service
templates/apache/: apache.conf.in  apache.service.in  (+1 more)
(+16 files in other folders)
